--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name= "button_name">Ask</string>
+    <string name="textView">Make Everyday Decisions Easier</string>
+    <string name="todo">TODO</string>
 </resources>
